--- a/text/latex_text/kapitoly/konfigurace/0_konfigurace_uvod.tex
+++ b/text/latex_text/kapitoly/konfigurace/0_konfigurace_uvod.tex
@@ -1,17 +1,22 @@
-Tato kapitola se zabývá hodnocením současného stavu správy dat na katedře geoinformatiky, návrhem databázového řešení dle požadavků a možností katedry a podrobně popisuje vytvoření testovacího prostředí na serverech katedry dle vytvořeného návrhu. Do hloubky popisuje konfiguraci vybraných nástrojů, včetně jejich praktického spuštění. 
+Tato kapitola se zabývá hodnocením současného stavu správy dat na katedře geoinformatiky, návrhem databázového řešení dle požadavků a možností katedry a podrobně popisuje vytvoření testovacího prostředí na serverech katedry dle vytvořeného návrhu. Do hloubky popisuje konfiguraci vybraných nástrojů, včetně jejich nasazení.
+
+Katedra má zájem využít potenciál databázového řešení, které bude zajišťovat efektivní uložení, sdílení a správu dat, která má katedra k dispozici. Zároveň má v~plánu vyučovat problematiku správy dat v~databázi. Studenti se budou moci nejen dozvědět o způsobech uložení dat, ale také je prakticky vyzkoušet, pochopit jejich fungování, naučit se pracovat s daty nahranými do GIS software a v neposlední řadě tato data použít pro své projekty a závěrečné práce. Velkou výhodou bude také větší připravenost do praxe, kde je databázové ukládání dat hojně rozšířeno. Data uložená v~databázi pak budou mnohem snáze využitelná jak pracovníky katedry, tak i jejími studenty. 
 
 \subsection{Aktuální stav správy dat}
 \label{kAktualniStav}
 
-Katedra aktuálně provozuje tři servery, konkrétně virtus.upol.cz, gislib.upol.cz a geohydro.upol.cz. Poslední z jmenovaných byl poskytnut jako testovací server pro tuto práci a v budoucnu s ním počítá jako s master serverem pro zde popisované databázové řešení. První dva zmíněné servery jsou aktivně používány, hostují například geoportál publikovaný skrze ArcGIS Server, který je důležitým prostředkem pro prezentaci projektů a dat, která na katedře vznikají. Data ke geoportálu i dalším aplikacím běžícím na těchto serverech jsou ukládána do MS SQL Serveru, každý ze serverů momentálně obsahuje jiné datové sady, které nejsou pravidelně zálohovány, protože aktualizace dat není příliš častá. Aktuální řešení nepoužívá replikaci dat, což může způsobovat nedostupnost dat z důvodu výpadku serveru. 
+Katedra aktuálně provozuje tři servery, konkrétně \texttt{virtus.upol.cz}, \texttt{atlas.upol.cz} a~\texttt{geo\-hydro.upol.cz}. Poslední z jmenovaných byl poskytnut jako testovací server pro tuto práci a v budoucnu se s ním počítá jako s master serverem pro zde popisované databázové řešení. První dva zmíněné servery jsou aktivně používány, hostují například geoportál publikovaný skrze ArcGIS Server, který je důležitým prostředkem pro prezentaci projektů a dat, která na katedře vznikají. Data ke geoportálu i dalším aplikacím běžícím na těchto serverech jsou ukládána do MS SQL Serveru, přičemž každý ze serverů obsahuje jiné datové sady, které nejsou pravidelně zálohovány, protože jejich aktualizace není příliš častá. Aktuální řešení nepoužívá replikaci dat, data tedy mohou být nedostupná z důvodu výpadku serveru. 
 
-Databáze aktuálně obsahují data například z projektů BotanGIS\footnote{\url{http://botangis.upol.cz/botangis/mapa}}, Virtuální studovna CHKO Litovelské Pomoraví\footnote{http://virtus.upol.cz/}, dále data metadatového systému Micka\footnote{\url{gislib.upol.cz/metadata}}, data ze senzorové sítě KGI, data ke studentským pracím a také ukázková data určená pro výuku. Je založeno přibližně 10 účtů, které mají přístup pro zápis, a řádově v desítkách účtů s právem čtení. V současné situaci není do databází příliš často zapisováno. 
+Databáze aktuálně obsahují data například z projektů BotanGIS\footnote{\url{http://botangis.upol.cz/botangis/mapa}}, Virtuální studovna CHKO Litovelské Pomoraví\footnote{\url{http://virtus.upol.cz/}}, dále data metadatového systému Micka\footnote{\url{gislib.upol.cz/metadata}}, data ze senzorové sítě KGI, data ke studentským pracím a také ukázková data určená pro výuku. Je založeno přibližně 10 účtů, které mají přístup pro zápis, a řádově v desítkách účtů s právem čtení, do databází aktuálně není příliš často zapisováno. 
 
-Současný stav, kdy se přenášejí data přes různá hardwarová zařízení nebo kopírují po síti, není plně vyhovující z několika důvodů. Často jedná o velké objemy dat, jejichž kopie může trvat řádově až desítky minut. Studenti si musejí dělat kopie dat při každém cvičení, což velice zdržuje výuku. Data jsou poté fyzicky uložena na počítačích v učebnách, což mimo jiné dovoluje, aby se k datům například z různých projektů dostal kdokoliv, kdo má přístup na učebnu. Při každé aktualizaci dat je navíc potřeba data opět zkopírovat, což je další časové omezení, k tomu může dojít k nekonzistenci dat různých datových zdrojů. 
+Velké množství dat, které má katedra k dispozici, je však stále uloženo ve formátech Shapefile nebo File Geodatabase. Každý kdo chce tato data použít, musí je přenést přes různá hardwarová zařízení nebo je zkopírovat po síti. Studenti si musejí dělat kopie dat při každém cvičení, což velice zdržuje výuku. Často se totiž jedná o velké objemy dat, jejichž kopie může trvat řádově v jednotkách až desítkách minut. Data jsou poté fyzicky uložena na počítačích v učebnách, což mimo jiné dovoluje, aby se k datům dostal kdokoliv, kdo má na učebnu přístup. Není tedy přehled o tom, kdo data využívá. Studenti navíc netuší, s jakými daty pracují a nabývají nesprávných představ o tom, že všechna data jsou vždy uložená ve formátu Shapefile. Zároveň se špatně zajišťuje aktualizace dat, při které, není-li spravována centralizovaně, může docházet k nekonzistenci dat. Při kopírováním dat na různá datová uložiště je navíc těžké dodržet licenční podmínky, se kterými jsou data pořizována. 
 
 \subsection{Požadavky na databázové řešení}
 \label{kPozadavky}
 
-Katedra má zájem využít potenciál databázového řešení a plánuje využít tento návrh k uložení dalších datových sad, které má k dispozici a které jsou momentálně dostupné ve formátech shapefile nebo geodatabáze, ale zatím nejsou uložená v databázi, kterou je možno sdílet. Jedná se například o datové sady ArcČR500 verze 2.0 a 3.0, Data200 (ČUZK), CEDA ČR 150, data, která byla uvolněna pro podporu pro Krajinotvorný program MŽP, nebo data dostupná k produktům Esri nebo Idrisi. Data uložená v databázi pak budou mnohem snáze využitelná jak pracovníky, tak i studenty katedry, kteří data využijí nejen ve výuce, ale také v jejich odborných prácích. Při kopírováním dat na různá datová uložiště je navíc těžké udržet licenční podmínky, se kterými jsou data pořizována. 
+Základním požadavkem byl výběr takového databázového systému, který je široce používán v oblasti geoinformatiky a zároveň je podporován produkty ArcGIS. Požadavem bylo také zhodnocení finanční stránky, replikace je totiž v mnohých komerčních systémech zařazena až mezi nejpokročilejší funkcionalitu a tedy je dostupná až s drazšími licencemi. 
 
+Katedra má v zájmu ukládat do databáze mnohem více datových sad, které má k dispozici a které jsou momentálně dostupné pouze ve formátech Shapefile nebo File Geodatabase. Jedná se například o datové sady ArcČR500 verze 2.0 a 3.0, Data200 (ČUZK), CEDA ČR 150, data, která byla uvolněna jako podpora pro Krajinotvorný program MŽP, nebo data dostupná k produktům Esri nebo Idrisi. Databázové řešení by tedy mělo být navrženo tak, aby uneslo mnohem větší počet připojení a dotazů než v současné době, protože datového sady, které budou nově dostupné skrze databázi, budou používány v řadě cvičení. Plánem je v rámci cvičení studentům umožňit plnohodnotnou práci s daty, tedy povolit jim jak čtení dat, tak zápis do databáze. 
+
+Návrh by měl také zohlednit zájem katedry o využití jednoho ze serverů jako slave server pro replikaci dat ze senzorové sítě Ekodata. 
 
