--- a/text/latex_text/kapitoly/konfigurace/2_priprava_prostredi_pro_konfiguraci.tex
+++ b/text/latex_text/kapitoly/konfigurace/2_priprava_prostredi_pro_konfiguraci.tex
@@ -1,37 +1,39 @@
-      \subsection{Příprava prostředí pro konfiguraci replikace}
+      \subsection{Příprava serverů před konfigurací replikace}
       \label{kPriprava}
-Na začátku je potřeba připravit prostředí hned s několika závislostmi. Hlavním používaným software je PostgreSQL s extenzemi PostGIS, Slony-I a pgpool. Informace o~instalacích jednotlivých komponent jsou dostupné na jejich webových stránkách. Ve Windows si stačí stáhnout pouze instalační balík pro PostgreSQL, který umožňuje instalaci databázového systému včetně všech výše zmíněných extenzí. Pro grafickou administraci databáze je doporučený, ale nepovinný, program \mbox{PgAdminIII}\footnote{http://www.pgadmin.org/}, který je taktéž multiplatformní. Většina příkazů je zde popisována skrze příkazový řádek, mají však i své ekvivalentní použití skrze grafické rozhraní.
+Na začátku je potřeba připravit servery a nainstalovat na ně PostgreSQL s extenzemi PostGIS, Slony-I a pgpool. Informace o~instalacích jednotlivých komponent jsou dostupné na jejich webových stránkách. Ve Windows si stačí stáhnout pouze instalační balík pro PostgreSQL, který umožňuje instalaci databázového systému včetně všech výše zmíněných extenzí. Pro grafickou administraci databáze je doporučený, ale nepovinný, program \mbox{PgAdmin3}\footnote{http://www.pgadmin.org/}, který je taktéž multiplatformní. Většina příkazů je zde popisována skrze příkazový řádek, grafické rozhraní však poskytuje odpovídající volby.
 
-Všechny technologie byly testovány na operačním systému Debian-based Linux, tedy některé přiklady použité v této kapitole, především pak ukázky absolutních cest k souborům, odpovídají struktuře tohoto systému. Slony-I bylo navíc vyzkoušeno také na systému Windows XP. Bylo používáno databázového systému PostgreSQL ve verzích PostgreSQL 9.1 a 9.3, Postgis verze 1.5 a 2.1, Slony-I verze 2.1 a pgpool verze 3.1 a 3.3.
+Všechny technologie byly testovány na operačním systému Debian Linux. Některé příklady použité v této kapitole, především pak ukázky absolutních cest k souborům, tedy odpovídají struktuře tohoto systému. Slony-I bylo navíc vyzkoušeno také na systému Windows XP. Bylo použito databázového systému PostgreSQL ve verzích PostgreSQL 9.1 a 9.3, Postgis verze 1.5 a 2.1, Slony-I verze 2.1 a pgpool verze 3.1 a~3.3.
 
-Pro databázové servery byla zvolena tři datová uložiště, pro jejichž přehled \vizTabulka{tServery}. IP adresy byly pro větší názornost upraveny na rozsah běžné lokální sítě. Vzhledem k tomu, že se do databáze bude přistupovat skrze pgpoool, není potřeba, aby kterýkoli z níže vypsaných serverů, měl veřejnou IP adresu. Všechny servery běží na defaultním portu 5432, který je standardem pro PostgreSQL.
+Pro databázové servery byla zvolena tři datová uložiště, pro jejichž přehled \vizTabulka{tServery}. IP adresy byly pro větší názornost upraveny na rozsah běžné lokální sítě. Vzhledem k tomu, že se do databáze bude přistupovat skrze pgpoool, není třeba, aby kterýkoli z níže vypsaných serverů, měl veřejnou IP adresu. Všechny servery běží na defaultním portu 5432, který je standardem pro PostgreSQL.
 
         \begin{table}[H]
           \caption[Přehled databázových serverů]{Přehled databázových serverů}
             \label{tServery}
             \begin{center}
-            \begin{tabular}{lllll}
-              \texttt{název serveru} & & \texttt{IP adresa} & & \texttt{port}\\
-              \texttt{-------------------------} & \texttt{+} & \texttt{--------------------------} & \texttt{+} & \texttt{------------}\\
-                                 \texttt{master} & \texttt{|} & \texttt{192.168.0.100} & \texttt{|} & \texttt{5432}\\
-                                 \texttt{slave1} & \texttt{|} & \texttt{192.168.0.101} & \texttt{|} & \texttt{5432}\\
-                                 \texttt{slave2} & \texttt{|} & \texttt{192.168.0.102} & \texttt{|} & \texttt{5432}\\
+              \rowcolors{1}{white}{lightgray}
+            \begin{tabular}{|lll|}
+              \hline
+              \color{purpurova7}{název serveru} & \color{purpurova7}{IP adresa} & \color{purpurova7}{port}\\
+                                 \texttt{master} & \texttt{192.168.0.100} & \texttt{5432}\\
+                                 \texttt{slave1} & \texttt{192.168.0.101} & \texttt{5432}\\
+                                 \texttt{slave2} & \texttt{192.168.0.102} & \texttt{5432}\\
+              \hline
               \end{tabular}
             \end{center}
         \end{table}
 
-Aby bylo možné pracovat s databází, je nejdříve nutné chápat význam jednotlivých konfiguračních souborů a mít přehled o souborové struktuře PostgreSQL. Vzhledem k tomu, že si ji každý systém uzpůsobuje podle sebe, nezbývá než po instalaci PostgreSQL nastudovat, kde se jaký soubor nachází. Existuje tabulka \texttt{pg\_settings}, která uchovává veškeré informace o nastavení databáze. SQL příkazem volajícím tuto tabulku je možno vypsat absolutní cestu k datům (\texttt{data\_directory}) a cestu k souboru, který uchovává PID (process-ID) běžícího procesu (\texttt{external\_pid\_file}). Také popisuje tři hlavní konfigurační soubory:
+Aby bylo možné pracovat s databází, je nejdříve nutné chápat význam jednotlivých konfiguračních souborů a mít přehled o souborové struktuře PostgreSQL. Vzhledem k tomu, že si ji každý systém uzpůsobuje podle sebe, nezbývá než po instalaci PostgreSQL nastudovat, kde se jaký soubor nachází. Existuje tabulka \texttt{pg\_settings}, která uchovává veškeré informace o nastavení databáze. SQL příkazem, který čte z této tabulky, je možno vypsat absolutní cestu k datům (\texttt{data\_directory}) a cestu ke třem hlavním konfiguračním souborům:
 
 \begin{itemize}
   \item \texttt{postgres.conf}, který definuje obecné nastavení databáze,
     \item \texttt{pg\_hba.conf}, který povoluje konkrétním uživatelům přístup z určitých IP adres,
-    \item \texttt{pg\_ident.conf}, který slouží k mapování uživatel operačního systému na uživatele PostgreSQL \citep{ObeHsu2012}.
+    \item \texttt{pg\_ident.conf}, který slouží k mapování uživatelů operačního systému na uživatele PostgreSQL \citep{ObeHsu2012}.
 \end{itemize}
 
-Příklad SQL příkazu, spuštěného na serveru master serveru, který vypíše umístění jednotlivých souborů a složek:
+Příklad SQL příkazu, spuštěného na master serveru, který vypíše umístění jednotlivých souborů a složek:
 
 \begin{lstlisting}
-SELECT name, setting FROM pg_settings WHERE category = 'File Locations';
+SELECT name, setting FROM pg_settings WHERE category =  'File Locations';
 \end{lstlisting}
       \begin{table}[H]
         \label{fileLocation}
@@ -54,54 +56,51 @@ SELECT name, setting FROM pg_settings WHERE category = 'File Locations';
 
 Příklad změny hesla uživatele \texttt{postgres} na master serveru:
 \begin{lstlisting}
-ALTER ROLE postgres PASSSWORD 'kgigis';
+ALTER ROLE postgres PASSWORD 'kgigis';
 \end{lstlisting}
 
 Příklad vytvoření nového uživatele \texttt{replikator} s přidáním práv pro replikaci na master serveru: 
-\begin{lstlisting}
-CREATE ROLE replikator REPLICATION ENCRYPTED PASSWORD 'kgigis';
+\begin{lstlisting}[]
+CREATE ROLE replikator REPLICATION ENCRYPTED PASSWORD   'kgigis';
 \end{lstlisting}
 
-Pokud se začíná databázovým systémem, který ještě neobsahuje žádná data, je vhodné replikaci spustit ještě před přidáváním dat a to z důvodu rychlosti přenosu dat na druhý databázový server. V případě, že již databáze naplněná daty je, není problém replikaci spustit, jen je třeba počítat s delším časem kopírovaní dat a větší opatrností při konfiguraci. 
+Pokud se začíná databázovým systémem, který ještě neobsahuje žádná data, je vhodné replikaci spustit ještě před přidáváním dat. V případě, že již databáze naplněná daty je, není problém replikaci spustit, jen je třeba počítat s delším časem kopírovaní dat a větší opatrností při konfiguraci. 
 
-Oba typy replikace, vyžadují lehce odlišné přístupy při přípravě dat před spuštěním samotné replikace. 
-Slony-I replikace vyžaduje mít předem vytvořenou strukturu databáze včetně tabulek a poté zajistit existenci totožné kopie na všech serverech v clusteru. Je možné toho dosáhnout použitím utility \texttt{pg\_dump}, která data exportuje, na master servery, a \texttt{pg\_restore}, která data importuje, na slave serveru. Tímto způsobem lze převádět jak strukturu databáze, tak data, a zároveň to umožňuje přenášet pouze vybrané části databáze. 
+Každý typ replikace vyžaduje lehce odlišnou přípravu dat před spuštěním samotné replikace. 
+Slony-I replikace vyžaduje mít předem vytvořenou strukturu databáze včetně tabulek a poté zajistit existenci totožné kopie na všech serverech v clusteru. Je možné toho dosáhnout použitím utility \texttt{pg\_dump}, která data exportuje na master serveru a \texttt{pg\_restore}, která data importuje na slave serverech. Tímto způsobem lze převádět jak strukturu databáze, tak data, a zároveň to umožňuje přenášet pouze vybrané části databáze. 
 
-Příklad exportu a importu dat z databáze do databáze dat skrze:
+Příklad exportu a importu dat z databáze do databáze:
 \begin{lstlisting}[keywordstyle=\color{purpurova7},identifierstyle=\color{black},stringstyle=\color{black}]
-  pg_dump > /tmp/dump.sql
-  pg_restore /tmp/dump.sql
+> pg_dump > /tmp/dump.sql
+> pg_restore /tmp/dump.sql
 \end{lstlisting}
 
-Streaming replikace, která funguje pouze mezi dvěmi a více databázemi běžícími na stejném systému a architektuře, vyžaduje kopii celé datové složky s daty \texttt{data\_directory}. Je mnoho způsobů, jak toho dosáhnout, například klasickým kopírováním skrze utilitu \texttt{cp}, resp. \texttt{scp} u vzdálených složek, nebo utilitou \texttt{rsync}. Kopírování dat za běhu databáze navíc vyžaduje použití příkazu \texttt{SELECT pg\_start\_backup}, který zajistí, že bude archivovat transakční log po celou dobu kopírovná, tedy až do té doby než proběhne příkaz \texttt{SELECT pg\_stop\_backup}. Tím nepřijdeme o žádné změny, které nastanou v průběhu kopírování dat.
+Streaming replikace vyžaduje kopii celé složky \texttt{data\_directory}. Je mnoho způsobů, jak toho dosáhnout, například klasickým kopírováním skrze utilitu \texttt{cp}, resp. \texttt{scp} u vzdálených složek, nebo utilitou \texttt{rsync}. Kopírování dat za běhu databáze navíc vyžaduje použití příkazu \texttt{SELECT pg\_start\_backup}, který zajistí, že po dobu kopírování budou změny zapisovány do transakčního logu nikoli do databáze, přímy zápis do databáze lze znovu povolit příkazem \texttt{SELECT pg\_stop\_backup}. Tím je zajištěna konzistence kopírovaných dat.
 
-Příklad možného způsobu zkopírování dat master serveru na repliku slave1 spuštěného z slave1:
-\begin{lstlisting}
-  SELECT pg_start_backup('backup', true)
+Příklad zkopírování dat z master serveru na slave1 příkazem spuštěným ze slave1:
+{\color{purpurova7}POZNAMKA VIZ PAPÍR} \begin{lstlisting} SELECT pg_start_backup('backup', true)
 \end{lstlisting}
 \begin{lstlisting}[keywordstyle=\bfseries\color{purpurova7},identifierstyle=\color{black},stringstyle=\color{black}]
-  scp -rv root@192.168.0.100:/var/lib/postgresql/9.1/main /var/lib/postgresql/9.1/main
-  rm /var/lib/postgresql/9.1/main/postmaster.pid
+> scp -rv root@192.168.0.100:/var/lib/postgresql/9.1/main /var/lib/postgresql/9.1/main
+> rm /var/lib/postgresql/9.1/main/postmaster.pid
 \end{lstlisting}
 \begin{lstlisting}
-  SELECT pg_stop_backup()
+SELECT pg_stop_backup()
 \end{lstlisting}
 
-Stejný způsobem je možno provést i kopii na slave2. 
-
-Alternativou výše zmíněných nástrojů je utilita přímo určená pro zálohování dat v PostgreSQL \texttt{pg\_basebackup}. Tento příkaz mimo jiné umožňuje kopírování dat za běhu replikace bez nutnosti použití \texttt{pg\_start/stop\_backup}.
+Alternativou výše zmíněního postupu je použití utility přímo určené pro zálohování dat v PostgreSQL nazvané \texttt{pg\_basebackup}. Tento příkaz mimo jiné umožňuje kopírování dat za běhu replikace bez nutnosti použití \texttt{pg\_start/stop\_backup}.
 
 Použití \texttt{pg\_basebackup} pro vytvoření repliky:
 \begin{lstlisting}[keywordstyle=\bfseries\color{purpurova7},identifierstyle=\color{black},stringstyle=\color{black}]
-  pg_basebackup -D /var/lib/postgresql/9.1/main/ -U replikator -h 192.168.0.100
+> pg_basebackup -D /var/lib/postgresql/9.1/main/ -U replikator -h 192.168.0.100
 \end{lstlisting}
 
 Kopírování dat je velice důležitý krok pro správný chod replikace. V případě, že se data nesprávně zkopírují, není možné replikaci zprovoznit. 
 
-Pří kopírování celé datové struktury je vhodné zajistit jednotlivým souborům a složkám správa. Vzhledem k tomu, že databázový systém zapisuje do složky s daty \texttt{(data\_directory)}, musí mít postgres, i po zkopírování celé datové struktury na jiný server, práva pro zápis.
+Pří kopírování celé datové struktury je vhodné nastavit jednotlivým souborům a~složkám správa. Vzhledem k tomu, že databázový systém zapisuje do složky s daty (\texttt{data\_directory}), musí mít PostgreSQL, i po zkopírování celé datové struktury na jiný server, práva pro zápis.
 
-A v neposlední řadě je potřeba zajistit konektivitu obou, resp. všech serverů v replikačním clusteru. S tím souvisí i nutnost nastavení povolení přístupů z IP adres slave serverů, kterou je možno zajistit skrze konfigurační soubor \texttt{pg\_hba.conf}. Následující příklad ukazuje možné nastavení souboru \texttt{pg\_hba.conf} na master serveru. Povoluje uživetelům market a replication, přihlášených z dané IP adresy, přistupovat na master server a číst, resp. replikovat data.
-
+V neposlední řadě je potřeba zajistit vzájemnou konektivitu všech serverů v replikačním clusteru. S tím souvisí i nutnost povolení přístupů z IP adres slave serverů. K tomu slouží konfigurační soubor \texttt{pg\_hba.conf}. Následující příklad ukazuje možné nastavení souboru \texttt{pg\_hba.conf} na master serveru. Povoluje uživetelům market a replication, přihlášených z dané IP adresy, přistupovat na master server a číst, resp. replikovat data.
+{\color{purpurova7}JINÝ PŘÍKLAD}
       \begin{table}[H]
         \label{pgHba}
           \begin{center}
