--- a/text/latex_text/Solanska_DP.tex
+++ b/text/latex_text/Solanska_DP.tex
@@ -103,6 +103,7 @@
       \input{kapitoly/konfigurace/2_priprava_prostredi_pro_konfiguraci.tex}
       \input{kapitoly/konfigurace/3_konfigurace_replikace.tex}
       \input{kapitoly/konfigurace/4_rozlozeni_zateze.tex}
+      \input{kapitoly/konfigurace/6_testovani_vykonu.tex}
 
     %------------------------------------------------------------------------- DISKUZE
     \newpage
@@ -111,7 +112,11 @@
     %------------------------------------------------------------------------- ZÁVĚR
     \newpage
     \section{ZÁVĚR}
+Tato práce zhodnotila možnosti replikačních řešení a základě toho navrhla databázové řešení s ohledem na možnosti a požadavky katedry. V rešerší části byly vymezeny pojmy synchronizace, replikace a související pojem verzování a popsána replikace včetně variant synchronní, asynchronní, jednosměrná, dvousměrná, kaskádová, logická a fyzická. Bylo rozebráno, jaké požadavky pro databázové ukládání dat mají produkty ArcGIS a podrobně bylo popsáno řešení ArcSDE, které se v ArcGIS produktech používá pro připojení k databázi. 
 
+Na základě rešerše byl vybrán databázový server PostgreSQL, který je možno použít v kombinaci s produkty ArcGIS produkty, což byl jeden z hlavních požadavků pro výběr databázového systému. Byl sestaven návrh databázového řešení který zohledňuje všechny požadavky katedry a možnosti daných technologií. Bylo vytvořeno testovací prostředí na serveru poskytnutém katedrou, na němž byly dané procesy otestovány. Na základě toho pak byl sepsán podrobný popis toho, jak nastavit replikaci ve variantě streaming a Slony-I. Návrh zahrnul také možnost použití nástroje pro rozložení zátěže mezi servery v databázovém řešení. 
+
+Návrh databázového řešení slibuje zvyšení interoperability,  usnadnění sdílení dat a řešení licenčních podmínek, dále zajištění vysoké dostupnosti a aktuálnosti dat. Studenti navíc budou mít možnost vyzkoušet si práci s databází, která je může lépe připravit na budoucí zaměstání.:
     %------------------------------------------------------------------------- LITERATURA
     \makeBibliography{literatura}
     %\bibliography{literatura}
