--- a/text/latex_text/kapitoly/teorie/1_teorie_uvod.tex
+++ b/text/latex_text/kapitoly/teorie/1_teorie_uvod.tex
@@ -1,8 +1,8 @@
-Databáze je strukturovaná kolekce dat, která slouží pro efektivní ukládání dat a jejich zpětně čtení \citep{Oppel2009}. V relační databázi jsou data ukládána ve formě tabulek, tedy entit a atributů, a jsou vzájemně propojeny logickými vazbami, které se nazývájí {\it relace} \citep{Connolly2005}. Toto logické uložení vazeb mezi tabulkami umožňuje efektivní manipulaci s daty, rychlé vyhledávání i komplexní analýzu \citep{Momjian2001}. 
+Databáze je strukturovaná kolekce dat, která slouží pro efektivní ukládání dat a jejich zpětně čtení \citep{Oppel2009}. V relační databázi jsou data ukládána ve formě tabulek, tedy entit a atributů, které jsou vzájemně propojeny vazbami mezi entitami \citep{Connolly2005}. Toto logické uložení vazeb mezi tabulkami umožňuje efektivní manipulaci s daty, rychlé vyhledávání i komplexní analýzu \citep{Momjian2001}. 
 
 Základy {\it relační databáze} položil v roce 1970 matematik E. F. Codd, který relačnímu modelu přidal i srozumitelné příkazy vycházejících z běžné angličtiny, které jsou dnes známy jako jazyk {\it SQL} (Structured Query Language)\citep{Zak2001}. V dnešní době je možné setkat se také s pojmy objektová a objektově-relační databáze, které přebírají řadu vlastností z oblasti objektového programování.
 
-Obvykle se rozlišují pojmy databáze, který odkazuje na obecný koncept, a pojem databázový systém nebo přesněji {\it systém řízení báze dat} \footnote{angl. Database Management System (DBMS)}, což je konkrétním počítačovým program, který zajišťuje fyzické uložení dat. Moderní SŘBD jsou navrženy na principu klient/server, kdy databáze běží jako služba na pozadí a čeká na dotazy od klientů. Server uživatelům umožňuje skrze jazyk SQL přístupovat k databázi, vytvářet a aktualizovat data, stejně jak jako vyhledávat či analýzovat \citep{Connolly2005}.
+Obvykle se rozlišují pojmy databáze, který odkazuje na obecný koncept, a pojem databázový systém nebo přesněji {\it systém řízení báze dat} \footnote{angl. Database Management System (DBMS)}, což je konkrétním počítačovým program, který zajišťuje fyzické uložení dat. Moderní SŘBD jsou navrženy na principu klient/server, kdy databáze běží jako služba na pozadí a čeká na dotazy od klientů. Server uživatelům umožňuje skrze jazyk SQL přístupovat k databázi, vytvářet a aktualizovat data, stejně jak jako vyhledávat či analyzovat \citep{Connolly2005}.
 
 Pro uložení dat malého projektu je samozřejmě možno použít i jiného formátu určeného pro ukládání dat, například soubory formátu XLS, XML, CSV či moderního JSON. Pro komplexní správu dat velkého projektu je však databáze pro své relace více než vhodná. 
 
@@ -15,7 +15,7 @@ Dalšími formáty, používanými právě pro ukládání dat do databáze, jso
 Dle standardu OGC jsou funkce pro získání geometrie z databáze:
 \begin{itemize}
 \item \texttt{ST\_AsBinary(geometry)} pro bitový zápis WKB a
-\item \texttt{ST\_AsText(geometry)} pro WKT text.
+\item \texttt{ST\_AsText(geometry)} pro textovou podobu WKT.
      \end{itemize}
 
 Simply Features je založen na 2D geometrii s~možností lineární interpolace mezi lomovými body. Základní prvky\footnote{zdroj \url {http://postgis.net/docs/manual-2.1/using\_postgis\_dbmanagement.html\#RefObject}}, které je možno vkládat ve formátu druh prvku a v závorce souřadnice lomových bodů, jsou:
